// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correct.js - {"yieldStarSpacing":true,"generatorStarSpacing":true,"spaceBeforeFunctionParen":true,"singleQuote":true,"jsxSingleQuote":true,"semi":false,"trailingComma":"none"} format 1`] = `
====================================options=====================================
generatorStarSpacing: true
jsxSingleQuote: true
parsers: ["babel", "babel-flow", "flow"]
printWidth: 80
semi: false
singleQuote: true
spaceBeforeFunctionParen: true
trailingComma: "none"
yieldStarSpacing: true
                                                                                | printWidth
=====================================input======================================
interface Foo<T> {
  getter(value: T): T;
}

=====================================output=====================================
interface Foo<T> {
  getter(value: T): T;
}

================================================================================
`;

exports[`correct.js - {"yieldStarSpacing":true,"generatorStarSpacing":true,"spaceBeforeFunctionParen":true,"singleQuote":true,"jsxSingleQuote":true,"semi":false} format 1`] = `
====================================options=====================================
generatorStarSpacing: true
jsxSingleQuote: true
parsers: ["typescript"]
printWidth: 80
semi: false
singleQuote: true
spaceBeforeFunctionParen: true
yieldStarSpacing: true
                                                                                | printWidth
=====================================input======================================
interface Foo<T> {
  getter(value: T): T;
}

=====================================output=====================================
interface Foo<T> {
  getter(value: T): T
}

================================================================================
`;

exports[`incorrect.js - {"yieldStarSpacing":true,"generatorStarSpacing":true,"spaceBeforeFunctionParen":true,"singleQuote":true,"jsxSingleQuote":true,"semi":false,"trailingComma":"none"} format 1`] = `
====================================options=====================================
generatorStarSpacing: true
jsxSingleQuote: true
parsers: ["babel", "babel-flow", "flow"]
printWidth: 80
semi: false
singleQuote: true
spaceBeforeFunctionParen: true
trailingComma: "none"
yieldStarSpacing: true
                                                                                | printWidth
=====================================input======================================
interface Foo <T>{
  getter(value:T):T
}

=====================================output=====================================
interface Foo<T> {
  getter(value: T): T;
}

================================================================================
`;

exports[`incorrect.js - {"yieldStarSpacing":true,"generatorStarSpacing":true,"spaceBeforeFunctionParen":true,"singleQuote":true,"jsxSingleQuote":true,"semi":false} format 1`] = `
====================================options=====================================
generatorStarSpacing: true
jsxSingleQuote: true
parsers: ["typescript"]
printWidth: 80
semi: false
singleQuote: true
spaceBeforeFunctionParen: true
yieldStarSpacing: true
                                                                                | printWidth
=====================================input======================================
interface Foo <T>{
  getter(value:T):T
}

=====================================output=====================================
interface Foo<T> {
  getter(value: T): T
}

================================================================================
`;
